--- a/ProgettoAMM/web/index.html
+++ b/ProgettoAMM/web/index.html
@@ -6,11 +6,23 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>NerdBook: il social network tecnologico</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div id="header">
+            <div id="index">
+                <h1>NerdBook: Index</h1>
+            </div>
+        </div>
+        <nav>
+            <ol>
+                <li><a href="/ProgettoAMM/M1/login.html" target="_blank">Login</a></li>
+                <li><a href="/ProgettoAMM/M1/bacheca.html" target="_blank">Bacheca</a></li>
+                <li><a href="/ProgettoAMM/M1/profilo.html" target="_blank">Profilo</a></li>
+                <li><a href="/ProgettoAMM/M1/descrizione.html" target="_blank">Descrizione</a></li>
+            </ol>
+        </nav>
     </body>
 </html>
