--- a/ProgettoAMM/web/M1/login.html
+++ b/ProgettoAMM/web/M1/login.html
@@ -6,11 +6,34 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>NerdBook: Login</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Davide Fara">
+        <meta name="keywords" content="nerdbook Nerd Book social network friends login access sign-in">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div id="header">
+            <div title="login">
+                <h1>NerdBook: Login</h1>
+            </div>
+        </div>
+        <nav>
+            <ol>
+                <li><a href="descrizione.html" target="_blank">Il Sito</a></li>
+                <li><a href="profilo.html" target="_blank">Profio</a></li>
+                <li><a href="bacheca.html" target="_blank">Bacheca</a></li>
+            </ol>
+        </nav>
+        <div id="divBody">
+            <form action="#" method="post">
+                <label for="user_id">Nome Utente</label>
+                <input type="text" name="user_id" id="user_id" value="Inserire il nome utente"/>
+                <label for="user_pswd">Password</label>
+                <input type="password" name="user_pswd" id="user_pswd" value="Inserire la password"/>
+                <button type="submit">Invia</button>
+            </form>
+            <p>Dimenticato la password o il nome utente? Crea un nuovo account!</p>
+        </div>
     </body>
 </html>
