--- a/ProgettoAMM/web/M1/login.html
+++ b/ProgettoAMM/web/M1/login.html
@@ -27,10 +27,10 @@ and open the template in the editor.
         </nav>
         <div id="divBody">
             <form action="#" method="post">
-                <label for="user_id">Nome Utente</label>
-                <input type="text" name="user_id" id="user_id" value="Inserire il nome utente"/>
-                <label for="user_pswd">Password</label>
-                <input type="password" name="user_pswd" id="user_pswd" value="Inserire la password"/>
+                <label for="userId">Nome Utente</label>
+                <input type="text" name="userId" id="userId" value="Inserire il nome utente"/>
+                <label for="userPswd">Password</label>
+                <input type="password" name="userPswd" id="userPswd" value="Inserire la password"/>
                 <button type="submit">Invia</button>
             </form>
             <p>Dimenticato la password o il nome utente? Crea un nuovo account!</p>
