--- a/ProgettoAMM/web/index.html
+++ b/ProgettoAMM/web/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>NerdBook: il social network tecnologico</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="ProgettoAMM/M2/style.css" media="screen">
     </head>
     <body>
         <div id="header">
@@ -18,10 +19,10 @@ and open the template in the editor.
         </div>
         <nav>
             <ol>
-                <li><a href="/ProgettoAMM/M1/login.html" target="_blank">Login</a></li>
-                <li><a href="/ProgettoAMM/M1/bacheca.html" target="_blank">Bacheca</a></li>
-                <li><a href="/ProgettoAMM/M1/profilo.html" target="_blank">Profilo</a></li>
-                <li><a href="/ProgettoAMM/M1/descrizione.html" target="_blank">Descrizione</a></li>
+                <li><a href="/ProgettoAMM/M2/login.html" target="_blank">Login</a></li>
+                <li><a href="/ProgettoAMM/M2/bacheca.html" target="_blank">Bacheca</a></li>
+                <li><a href="/ProgettoAMM/M2/profilo.html" target="_blank">Profilo</a></li>
+                <li><a href="/ProgettoAMM/M2/descrizione.html" target="_blank">Descrizione</a></li>
             </ol>
         </nav>
     </body>
