--- a/ProgettoAMM/web/index.html
+++ b/ProgettoAMM/web/index.html
@@ -12,11 +12,11 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="ProgettoAMM/M2/style.css" media="screen">
     </head>
     <body>
-        <div id="header">
+        <header>
             <div id="index">
                 <h1>NerdBook: Index</h1>
             </div>
-        </div>
+        </header>
         <nav>
             <ol>
                 <li><a href="/ProgettoAMM/M2/login.html" target="_blank">Login</a></li>
