--- a/ProgettoAMM/web/M2/profilo.html
+++ b/ProgettoAMM/web/M2/profilo.html
@@ -14,11 +14,11 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="style.css" media="screen">
     </head>
     <body>
-        <div id="header">
+        <header>
             <div title="login">
                 <h1>NerdBook: Profilo</h1>
             </div>
-        </div>
+        </header>
         <nav>
             <ol>
                 <li><a href="descrizione.html" target="_blank">Il Sito</a></li>
