CSS updated: fare Login e Profilo, sistemare Bacheca

--- a/ProgettoAMM/web/M2/descrizione.html
+++ b/ProgettoAMM/web/M2/descrizione.html
@@ -18,21 +18,22 @@ and open the template in the editor.
             <div id="title">
                 <h1>NerdBook</h1>
             </div>
+            <nav>
+                <ol id="mainList">
+                    <li><a href="descrizione.html">Il Sito</a></li>
+                    <li><ul id="subList">
+                        <li><a href="#faqSito">FAQ Sito</a></li>
+                        <li><a href="#scopoEUtenti">A cosa serve e a chi è rivolto</a></li>
+                        <li><a href="#comeIscriversi">Come iscriversi</a></li>
+                        <li><a href="#sitoGratuito">Il sito è gratuito?</a></li>
+                    </ul></li>
+                    <li><a href="login.html" target="_blank">Login</a></li>
+                    <li><a href="bacheca.html" target="_blank">Bacheca</a></li>
+                    <li><a href="profilo.html" target="_blank">Profilo</a></li>
+                </ol>
+            </nav>
         </header>
-        <nav>
-            <ol>
-                <li><a href="descrizione.html">Il Sito</a></li>
-                <li><ul>
-                    <li><a href="#faqSito">FAQ Sito</a></li>
-                    <li><a href="#scopoEUtenti">A cosa serve e a chi è rivolto</a></li>
-                    <li><a href="#comeIscriversi">Come iscriversi</a></li>
-                    <li><a href="#sitoGratuito">Il sito è gratuito?</a></li>
-                </ul></li>
-                <li><a href="login.html" target="_blank">Login</a></li>
-                <li><a href="bacheca.html" target="_blank">Bacheca</a></li>
-                <li><a href="profilo.html" target="_blank">Profilo</a></li>
-            </ol>
-        </nav>
+
         <article id="faqSito">
             <h2>FAQ del sito</h2>
             <p>In questa sezione potrai trovare le informazioni di base sul sito</p>
