CSS updated: fare Login e Profilo, sistemare Descrizione (Bacheca dovrebbe andare)

--- a/ProgettoAMM/web/M2/descrizione.html
+++ b/ProgettoAMM/web/M2/descrizione.html
@@ -18,44 +18,49 @@ and open the template in the editor.
             <div id="title">
                 <h1>NerdBook</h1>
             </div>
-            <nav>
-                <ol id="mainList">
+            <nav id="mainList">
+                <ol>
                     <li><a href="descrizione.html">Il Sito</a></li>
-                    <li><ul id="subList">
-                        <li><a href="#faqSito">FAQ Sito</a></li>
-                        <li><a href="#scopoEUtenti">A cosa serve e a chi è rivolto</a></li>
-                        <li><a href="#comeIscriversi">Come iscriversi</a></li>
-                        <li><a href="#sitoGratuito">Il sito è gratuito?</a></li>
-                    </ul></li>
                     <li><a href="login.html" target="_blank">Login</a></li>
                     <li><a href="bacheca.html" target="_blank">Bacheca</a></li>
                     <li><a href="profilo.html" target="_blank">Profilo</a></li>
                 </ol>
             </nav>
-        </header>
 
-        <article id="faqSito">
-            <h2>FAQ del sito</h2>
-            <p>In questa sezione potrai trovare le informazioni di base sul sito</p>
-            <section id="scopoEUtenti">
-                <h3>Q: A chi e a cosa serve NerdBook?</h3>
-                <p>NerdBook è l'ultima frontiera del social-network! Iscriviti e inizia a comunicare con tutti i tuoi amici Nerd sulle ultime tendenze del mondo tecnologico!</p>
-                <p>Su questo sito potrai avere a che fare con tantissime persone che condividono i tuoi stessi interessi e, con un po' di fortuna, potrai anche trovare una fidanzata!</p>
-                <p>Ci sono un'infinit&agrave; di possibili incontri che puoi fare! Non perdere tempo ed iscriviti!</p>
-                <h6>NerdBook non si assume nessuna responsabilità riguardo eventuali fallimenti in campo amoroso.</h6>
-            </section>
-            <section id="comeIscriversi">    
-                <h3>Q: Come ci si iscrive a NerdBook?</h3>
-                <p>Per iscriverti a NerdBook è sufficiente fornire un'email, una password, il codice fiscale e l'atto di proprietà della casa.</p>
-                <p>L'iscrizione è veloce ed intuitiva, basta conoscere le basi di giapponese ed essere fluenti in coreano!</p>
-                <p>Clicca <a href="login.html" target="_blank">qui</a> per connetterti a NerdBook!</p>
-            </section>    
-            <section id="sitoGratuito">   
-                <h3>Q: Il sito è gratuito?</h3>
-                <p>NerdBook è un sito completamente(?) <b>GRATUITO</b>, nessun membro dello staff richiederà mai di effettuare un pagamento per l'iscrizione (ma magari per altro si...).</p>
-                <h6>NerdBook non si assume responsabilità riguardo lo stalking o lo spam dai parte dei weirdo</h6>
-                <p><a href="#title">Torna su</a></p>
-            </section>
-        </article>
+        </header>
+        <div class="sideBar" id="subList">
+            <h2>Index</h2>
+            <ul>
+                <li><a href="#faqSito">FAQ Sito</a></li>
+                <li><a href="#scopoEUtenti">A cosa serve e a chi è rivolto</a></li>
+                <li><a href="#comeIscriversi">Come iscriversi</a></li>
+                <li><a href="#sitoGratuito">Il sito è gratuito?</a></li>
+            </ul>
+        </div>
+        <div id="divBody">
+            <div id="faqSito">
+                <h2>FAQ del sito</h2>
+                <p>In questa sezione potrai trovare le informazioni di base sul sito</p>
+                <div id="scopoEUtenti">
+                    <h3>Q: A chi e a cosa serve NerdBook?</h3>
+                    <p>NerdBook è l'ultima frontiera del social-network! Iscriviti e inizia a comunicare con tutti i tuoi amici Nerd sulle ultime tendenze del mondo tecnologico!</p>
+                    <p>Su questo sito potrai avere a che fare con tantissime persone che condividono i tuoi stessi interessi e, con un po' di fortuna, potrai anche trovare una fidanzata!</p>
+                    <p>Ci sono un'infinit&agrave; di possibili incontri che puoi fare! Non perdere tempo ed iscriviti!</p>
+                    <h6>NerdBook non si assume nessuna responsabilità riguardo eventuali fallimenti in campo amoroso.</h6>
+                </div>
+                <div id="comeIscriversi">    
+                    <h3>Q: Come ci si iscrive a NerdBook?</h3>
+                    <p>Per iscriverti a NerdBook è sufficiente fornire un'email, una password, il codice fiscale e l'atto di proprietà della casa.</p>
+                    <p>L'iscrizione è veloce ed intuitiva, basta conoscere le basi di giapponese ed essere fluenti in coreano!</p>
+                    <p>Clicca <a href="login.html" target="_blank">qui</a> per connetterti a NerdBook!</p>
+                </div>    
+                <div id="sitoGratuito">   
+                    <h3>Q: Il sito è gratuito?</h3>
+                    <p>NerdBook è un sito completamente(?) <b>GRATUITO</b>, nessun membro dello staff richiederà mai di effettuare un pagamento per l'iscrizione (ma magari per altro si...).</p>
+                    <h6>NerdBook non si assume responsabilità riguardo lo stalking o lo spam dai parte dei weirdo</h6>
+                    <p><a href="#title">Torna su</a></p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
