CSS updated: fare Login e Profilo, sistemare Descrizione (Bacheca dovrebbe andare)

--- a/ProgettoAMM/web/M2/descrizione.html
+++ b/ProgettoAMM/web/M2/descrizione.html
@@ -39,8 +39,10 @@ and open the template in the editor.
         </div>
         <div id="divBody">
             <div id="faqSito">
-                <h2>FAQ del sito</h2>
-                <p>In questa sezione potrai trovare le informazioni di base sul sito</p>
+                <div id="intestazione">
+                    <h2>FAQ del sito</h2>
+                    <p>In questa sezione potrai trovare le informazioni di base sul sito</p>
+                </div>
                 <div id="scopoEUtenti">
                     <h3>Q: A chi e a cosa serve NerdBook?</h3>
                     <p>NerdBook è l'ultima frontiera del social-network! Iscriviti e inizia a comunicare con tutti i tuoi amici Nerd sulle ultime tendenze del mondo tecnologico!</p>
@@ -57,9 +59,9 @@ and open the template in the editor.
                 <div id="sitoGratuito">   
                     <h3>Q: Il sito è gratuito?</h3>
                     <p>NerdBook è un sito completamente(?) <b>GRATUITO</b>, nessun membro dello staff richiederà mai di effettuare un pagamento per l'iscrizione (ma magari per altro si...).</p>
-                    <h6>NerdBook non si assume responsabilità riguardo lo stalking o lo spam dai parte dei weirdo</h6>
-                    <p><a href="#title">Torna su</a></p>
+                    <h6>NerdBook non si assume responsabilità riguardo lo stalking o lo spam dai parte dei weirdo.</h6>
                 </div>
+                <p><a href="#title">Torna su</a></p>
             </div>
         </div>
     </body>
