--- a/ProgettoAMM/web/M2/login.html
+++ b/ProgettoAMM/web/M2/login.html
@@ -28,11 +28,11 @@ and open the template in the editor.
         </header>
 
         <div id="divBody">
-            <form action="#" method="post">
+            <form id="loginForm" action="#" method="post">
                 <label for="userId">Nome Utente</label>
-                <input type="text" name="userId" id="userId" value="Inserire il nome utente"/>
+                <input type="text" name="userId" id="userId" placeholder="Inserire il nome utente"/>
                 <label for="userPswd">Password</label>
-                <input type="password" name="userPswd" id="userPswd" value="Inserire la password"/>
+                <input type="password" name="userPswd" id="userPswd" placeholder="Inserire la password"/>
                 <button type="submit">Invia</button>
             </form>
             <p>Dimenticato la password o il nome utente? Crea un nuovo account!</p>
