--- a/ProgettoAMM/web/M2/profilo.html
+++ b/ProgettoAMM/web/M2/profilo.html
@@ -20,8 +20,10 @@ and open the template in the editor.
             </div>
             <nav>
                 <ol>
-                    <li><a href="descrizione.html" target="_blank">Il Sito</a></li>
+                    <li><a href="descrizione.html">Il Sito</a></li>
                     <li><a href="login.html" target="_blank">Login</a></li>
+                    <li><a href="bacheca.html" target="_blank">Bacheca</a></li>
+                    <li><a href="profilo.html" target="_blank">Profilo</a></li>
                 </ol>
             </nav>
         </header>
