--- a/ProgettoAMM/web/M2/bacheca.html
+++ b/ProgettoAMM/web/M2/bacheca.html
@@ -19,10 +19,12 @@ and open the template in the editor.
                 <h1>NerdBook: Bacheca</h1>
             </div>
             <nav>
-            <ol>
-                <li><a href="descrizione.html" target="_blank">Il Sito</a></li>
-                <li><a href="login.html" target="_blank">Login</a></li>
-            </ol>
+                <ol>
+                    <li><a href="descrizione.html">Il Sito</a></li>
+                    <li><a href="login.html" target="_blank">Login</a></li>
+                    <li><a href="bacheca.html" target="_blank">Bacheca</a></li>
+                    <li><a href="profilo.html" target="_blank">Profilo</a></li>
+                </ol>
             </nav>
         </header>
         
