CSS updated: minor changes

--- a/ProgettoAMM/web/M2/bacheca.html
+++ b/ProgettoAMM/web/M2/bacheca.html
@@ -17,10 +17,15 @@ and open the template in the editor.
         <header>
             <div id="bacheca">
                 <h1>NerdBook: Bacheca</h1>
+                <div class="nameLogOut">
+                    <img class="iconPic" title="fotoProfiloLogOut" alt="fotoProfiloLogOut" src="/ProgettoAMM/Assets/images.png">
+                    <h3>Davide Fara</h3>
+                    <p id="logoutP"><a href="login.html" target="_blank">Logout</a></p>
+                </div>
             </div>
             <nav>
                 <ol>
-                    <li><a href="descrizione.html">Il Sito</a></li>
+                    <li><a href="descrizione.html" target="_blank">Il Sito</a></li>
                     <li><a href="login.html" target="_blank">Login</a></li>
                     <li><a href="bacheca.html" target="_blank">Bacheca</a></li>
                     <li><a href="profilo.html" target="_blank">Profilo</a></li>
