--- a/ProgettoAMM/web/M2/login.html
+++ b/ProgettoAMM/web/M2/login.html
@@ -21,7 +21,7 @@ and open the template in the editor.
             <nav>
                 <ol>
                     <li><a href="descrizione.html" target="_blank">Il Sito</a></li>
-                    <li><a href="login.html" target="_blank">Login</a></li>
+                    <li ><a class="active" href="login.html" target="_blank">Login</a></li>
                     <li><a href="bacheca.html" target="_blank">Bacheca</a></li>
                     <li><a href="profilo.html" target="_blank">Profilo</a></li>
                 </ol>
