--- a/ProgettoAMM/web/M2/profilo.html
+++ b/ProgettoAMM/web/M2/profilo.html
@@ -28,7 +28,7 @@ and open the template in the editor.
                     <li><a href="descrizione.html" target="_blank">Il Sito</a></li>
                     <li><a href="login.html" target="_blank">Login</a></li>
                     <li><a href="bacheca.html" target="_blank">Bacheca</a></li>
-                    <li><a href="profilo.html" target="_blank">Profilo</a></li>
+                    <li><a class="active" href="profilo.html" target="_blank">Profilo</a></li>
                 </ol>
             </nav>
         </header>
