CSS updated: "remade" CSS, gotta fix "profilo" and check everything to make sure it's fine

--- a/ProgettoAMM/web/M2/descrizione.html
+++ b/ProgettoAMM/web/M2/descrizione.html
@@ -17,8 +17,13 @@ and open the template in the editor.
         <header>
             <div id="title">
                 <h1>NerdBook</h1>
+                 <div id="nameLogOut">
+                    <img class="iconPic" title="fotoProfiloLogOut" alt="fotoProfiloLogOut" src="/ProgettoAMM/Assets/images.png">
+                    <h3>Davide Fara</h3>
+                    <p><a href="login.html" target="_blank">Logout</a></p>
+                </div>
             </div>
-            <nav id="mainList">
+            <nav>
                 <ol>
                     <li><a class="active" href="descrizione.html" target="_blank">Il Sito</a></li>
                     <li><a href="login.html" target="_blank">Login</a></li>
@@ -37,7 +42,7 @@ and open the template in the editor.
                 <li><a href="#sitoGratuito">Il sito è gratuito?</a></li>
             </ul>
         </div>
-        <div id="divBody">
+        <div class="bodyDescrizione" id="divBody">
             <div id="faqSito">
                 <div id="intestazione">
                     <h2>FAQ del sito</h2>
