--- a/ProgettoAMM/web/M2/profilo.html
+++ b/ProgettoAMM/web/M2/profilo.html
@@ -16,8 +16,8 @@ and open the template in the editor.
     <body>
         <header>
             <div title="login">
-                <h1>Profilo</h1>
-                <div class="nameLogOut">
+                <h1>NerdBook</h1>
+                <div id="nameLogOut">
                     <img class="iconPic" title="fotoProfiloLogOut" alt="fotoProfiloLogOut" src="/ProgettoAMM/Assets/images.png">
                     <h3>Davide Fara</h3>
                     <p id="logoutP"><a href="login.html" target="_blank">Logout</a></p>
@@ -57,29 +57,26 @@ and open the template in the editor.
         </div>
 
         <div id="divBody">
+            
             <form id="profileForm" action="#" method="post">
-                <label for="userNome">Nome</label>
-                <input type="text" name="userNome" id="userNome"/>
-                <br/>
-                <label for="userCognome">Cognome</label>
-                <input type="text" name="userCognome" id="userCognome"/>
-                <br/>
-                <label for="userPicURL">Link foto profilo</label>
-                <input type="text" name="userPicURL" id="userPicURL" value=""/>
-                <br/>
-                <label for="userFraseDescrizione">Descrizione</label>
-                <textarea name="userFraseDescrizione" id="userFraseDescrizione"></textarea>
-                <br/>
-                <label for="userDataNascita">Data di nascita</label>
-                <input type="date" name="userDataNascita" id="userDataNascita"/>
-                <br/>
-                <label for="userPass">Password</label>
-                <input type="password" name="userPass" id="userPass"/>
-                <br/>
-                <label for="userConfermaPass">Conferma la Password</label>
-                <input type="password" name="userConfermaPass" id="userConfermaPass"/>
-                <br/>
-                <button type="submit">Invia</button>
+                <div id="imgDiv">
+                    <img class="formPic" title="fotoProfiloForm" alt="fotoProfiloForm" src="/ProgettoAMM/Assets/images.jpg">
+                </div>
+                <div id="formDiv">
+                    <label for="userNome">Nome</label>
+                    <input type="text" name="userNome" id="userNome"/>
+                    <label for="userCognome">Cognome</label>
+                    <input type="text" name="userCognome" id="userCognome"/>
+                    <label for="userDataNascita">Nato il</label>
+                    <input type="date" name="userDataNascita" id="userDataNascita"/>
+                    <label for="userFraseDescrizione">Frase di presentazione</label>
+                    <textarea name="userFraseDescrizione" id="userFraseDescrizione"></textarea>
+                    <label for="userPass">Password</label>
+                    <input type="password" name="userPass" id="userPass"/>
+                    <label for="userConfermaPass">Conferma la Password</label>
+                    <input type="password" name="userConfermaPass" id="userConfermaPass"/>
+                    <button type="submit">Invia</button>
+                </div>
             </form>
         </div>
     </body>
