--- a/ProgettoAMM/web/M2/descrizione.html
+++ b/ProgettoAMM/web/M2/descrizione.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>NerdBook</title>
+        <title>NerdBook: Descrizione</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Davide Fara">
@@ -17,10 +17,14 @@ and open the template in the editor.
         <header>
             <div id="title">
                 <h1>NerdBook</h1>
-                 <div id="nameLogOut">
-                    <img class="iconPic" title="fotoProfiloLogOut" alt="fotoProfiloLogOut" src="/ProgettoAMM/Assets/images.png">
-                    <h3>Davide Fara</h3>
-                    <p><a href="login.html" target="_blank">Logout</a></p>
+                <div id="logOut">
+                    <div id="imgLogOut">
+                        <img class="iconPic" title="fotoProfiloLogOut" alt="fotoProfiloLogOut" src="/ProgettoAMM/Assets/logOutPic.png">
+                    </div>
+                    <div id="nameLogOut">
+                        <h3>Davide Fara</h3>
+                        <p><a href="login.html" target="_blank">Logout</a></p>
+                    </div>
                 </div>
             </div>
             <nav>
@@ -35,7 +39,7 @@ and open the template in the editor.
         </header>
         <div class="sideBar" id="subList">
             <h2>Index</h2>
-            <ul>
+            <ul class="sideList">
                 <li><a href="#faqSito">FAQ Sito</a></li>
                 <li><a href="#scopoEUtenti">A cosa serve e a chi è rivolto</a></li>
                 <li><a href="#comeIscriversi">Come iscriversi</a></li>
